--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
   <div class="row">
   <div class="main">
-    
-    <a href="https://xiixiixii.xyz"><img src="Images/gate.gif"></a>
+    <div class="top_image">
+    <a href="https://xiixiixii.xyz"><img src="Images/DREAMING.gif" id="channel_gif" ></a>
+    </div>
     <p></p>
     <div class="row">
     <div class="custom-select" style="width:200px;">
